--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -14,6 +14,6 @@
 
     <item
         android:id="@+id/navigation_settings"
-        android:title="List"/>
+        android:title="Settings"/>
 
 </menu>
