--- a/app/src/main/res/layout/list_layout.xml
+++ b/app/src/main/res/layout/list_layout.xml
@@ -32,10 +32,28 @@
             android:paddingEnd="15dp"/>
 
         <TextView
+            android:id="@+id/border"
+            android:layout_height="1dp"
+            android:layout_row="1"
+            android:layout_column="0"
+            android:background="@color/light_gray"
+            android:layout_columnSpan="2"
+            android:layout_gravity="fill_horizontal"/>
+
+        <TextView
+            android:id="@+id/borderBottom"
+            android:layout_height="2dp"
+            android:layout_row="4"
+            android:layout_column="0"
+            android:background="@color/light_gray"
+            android:layout_columnSpan="2"
+            android:layout_gravity="fill_horizontal"/>
+
+        <TextView
             android:id="@+id/endDate"
             android:layout_height="wrap_content"
             android:text="10.04.2021"
-            android:layout_row="2"
+            android:layout_row="3"
             android:layout_column="0"
             android:layout_columnWeight="1"
             android:textAlignment="viewStart"
@@ -45,7 +63,7 @@
             android:id="@+id/startTime"
             android:layout_height="wrap_content"
             android:text="12:00"
-            android:layout_row="1"
+            android:layout_row="2"
             android:layout_column="1"
             android:layout_columnWeight="1"
             android:textAlignment="viewEnd"
@@ -56,7 +74,7 @@
             android:id="@+id/startDate"
             android:layout_height="wrap_content"
             android:text="10.04.2021"
-            android:layout_row="1"
+            android:layout_row="2"
             android:layout_column="0"
             android:layout_columnWeight="1"
             android:textAlignment="viewStart"
@@ -66,7 +84,7 @@
             android:id="@+id/endTime"
             android:layout_height="wrap_content"
             android:text="13:00"
-            android:layout_row="2"
+            android:layout_row="3"
             android:layout_column="1"
             android:layout_columnWeight="1"
             android:textAlignment="viewEnd"
