--- a/app/src/main/res/layout/settings_fragment.xml
+++ b/app/src/main/res/layout/settings_fragment.xml
@@ -16,6 +16,13 @@
         tools:layout_editor_absoluteX="16dp"
         tools:layout_editor_absoluteY="-191dp" />
 
+    <Button
+        android:id="@+id/exportButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/export"
+        tools:ignore="MissingConstraints" />
+
    <!-- <Button
         android:id="@+id/lang_rus"
         android:layout_width="126dp"
