ST-019 implemented popup [SP,KT]

--- a/app/src/main/res/layout/task_detail_fragment.xml
+++ b/app/src/main/res/layout/task_detail_fragment.xml
@@ -126,6 +126,7 @@
 
 
     <ListView
+        android:id="@+id/pauseList"
         android:layout_width="wrap_content"
         android:layout_height="fill_parent"
         android:layout_weight="100">
