--- a/app/src/main/res/layout/task_detail_fragment.xml
+++ b/app/src/main/res/layout/task_detail_fragment.xml
@@ -3,125 +3,133 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:layout_margin="10dp"
+    android:background="@drawable/popup_shape"
+    android:orientation="vertical"
     android:weightSum="100">
 
     <GridLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:numColumns="2"
-        android:verticalScrollbarPosition="right"
-        android:scrollbars="vertical">
+        android:scrollbars="vertical"
+        android:verticalScrollbarPosition="right">
+
         <TextView
             android:id="@+id/taskName"
             android:layout_height="wrap_content"
-            android:text="Header"
             android:layout_column="0"
             android:layout_columnWeight="1"
-            android:textStyle="bold"
+            android:paddingStart="15dp"
+            android:text="Header"
             android:textSize="25sp"
-            android:paddingStart="15dp"/>
+            android:textStyle="bold" />
+
         <TextView
             android:id="@+id/duration"
             android:layout_height="wrap_content"
-            android:text="10h"
             android:layout_column="1"
             android:layout_columnWeight="1"
+            android:paddingEnd="15dp"
+            android:text="10h"
             android:textAlignment="viewEnd"
-            android:textSize="25sp"
-            android:paddingEnd="15dp"/>
+            android:textSize="25sp" />
 
         <TextView
             android:id="@+id/border"
             android:layout_height="1dp"
             android:layout_row="1"
             android:layout_column="0"
-            android:background="@color/light_gray"
             android:layout_columnSpan="2"
-            android:layout_gravity="fill_horizontal"/>
+            android:layout_gravity="fill_horizontal"
+            android:background="@color/light_gray" />
 
 
         <TextView
             android:id="@+id/endDate"
             android:layout_height="wrap_content"
-            android:text="10.04.2021"
             android:layout_row="3"
             android:layout_column="0"
             android:layout_columnWeight="1"
-            android:textAlignment="viewStart"
             android:paddingStart="15dp"
-            android:textSize="20sp"/>
+            android:text="10.04.2021"
+            android:textAlignment="viewStart"
+            android:textSize="20sp" />
+
         <TextView
             android:id="@+id/startTime"
             android:layout_height="wrap_content"
-            android:text="12:00"
             android:layout_row="2"
             android:layout_column="1"
             android:layout_columnWeight="1"
-            android:textAlignment="viewEnd"
             android:paddingEnd="15dp"
-            android:textSize="20sp"/>
+            android:text="12:00"
+            android:textAlignment="viewEnd"
+            android:textSize="20sp" />
 
         <TextView
             android:id="@+id/startDate"
             android:layout_height="wrap_content"
-            android:text="10.04.2021"
             android:layout_row="2"
             android:layout_column="0"
             android:layout_columnWeight="1"
-            android:textAlignment="viewStart"
             android:paddingStart="15dp"
-            android:textSize="20sp"/>
+            android:text="10.04.2021"
+            android:textAlignment="viewStart"
+            android:textSize="20sp" />
+
         <TextView
             android:id="@+id/endTime"
             android:layout_height="wrap_content"
-            android:text="13:00"
             android:layout_row="3"
             android:layout_column="1"
             android:layout_columnWeight="1"
-            android:textAlignment="viewEnd"
             android:paddingEnd="15dp"
-            android:textSize="20sp"/>
+            android:text="13:00"
+            android:textAlignment="viewEnd"
+            android:textSize="20sp" />
 
         <TextView
             android:id="@+id/sum"
             android:layout_height="wrap_content"
-            android:text="12h"
             android:layout_row="4"
             android:layout_column="1"
             android:layout_columnWeight="1"
-            android:textAlignment="viewEnd"
             android:paddingEnd="15dp"
-            android:textSize="20sp"/>
+            android:text="12h"
+            android:textAlignment="viewEnd"
+            android:textSize="20sp" />
+
         <TextView
             android:id="@+id/border2"
             android:layout_height="1dp"
             android:layout_row="5"
             android:layout_column="0"
-            android:background="@color/light_gray"
             android:layout_columnSpan="2"
-            android:layout_gravity="fill_horizontal"/>
+            android:layout_gravity="fill_horizontal"
+            android:background="@color/light_gray" />
+
         <TextView
             android:id="@+id/taskName2"
             android:layout_height="wrap_content"
-            android:text="Pauses"
             android:layout_row="6"
             android:layout_column="0"
             android:layout_columnWeight="1"
-            android:textStyle="bold"
+            android:paddingStart="15dp"
+            android:text="Pauses"
             android:textSize="25sp"
-            android:paddingStart="15dp"/>
+            android:textStyle="bold" />
+
         <TextView
             android:id="@+id/duration2"
             android:layout_height="wrap_content"
-            android:text="2h"
             android:layout_row="6"
             android:layout_column="1"
             android:layout_columnWeight="1"
+            android:paddingEnd="15dp"
+            android:text="2h"
             android:textAlignment="viewEnd"
-            android:textSize="25sp"
-            android:paddingEnd="15dp"/>
+            android:textSize="25sp" />
     </GridLayout>
 
 
@@ -129,8 +137,7 @@
         android:id="@+id/pauseList"
         android:layout_width="wrap_content"
         android:layout_height="fill_parent"
-        android:layout_weight="100">
-    </ListView>
+        android:layout_weight="100"></ListView>
 
     <Button
         android:id="@+id/button_delete"
