--- a/app/src/main/res/layout/task_detail_fragment.xml
+++ b/app/src/main/res/layout/task_detail_fragment.xml
@@ -17,7 +17,7 @@
 
 
 
-        <EditText
+        <TextView
             android:id="@+id/taskName"
             android:layout_height="wrap_content"
             android:layout_column="0"
